K8s/homeexchange-apigateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeexchange-apigateway-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeexchange-apigateway
  template:
    metadata:
      labels:
        app: homeexchange-apigateway
    spec:
      containers:
        - name: homeexchange-apigateway
          image: adnancrnovrsanin/ds.apigate:latest
          ports: 
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: homeexchange-apigateway-srv
spec:
  type: ClusterIP
  selector:
    app: homeexchange-apigateway
  ports:
  - name: homeexchange-apigateway
    protocol: TCP
    port: 8080
    targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: homeexchange-apigateway-srv
spec:
  type: LoadBalancer
  selector:
    app: homeexchange-apigateway
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
