K8s/homeexchange-homeexchange-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeexchange-homeexchange-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeexchange-homeexchange
  template:
    metadata:
      labels:
        app: homeexchange-homeexchange
    spec:
      containers:
        - name: homeexchange-homeexchange
          image: adnancrnovrsanin/ds.homeexchange:latest
---

apiVersion: v1
kind: Service
metadata:
  name: homeexchange-homeexchange-srv
spec:
  type: ClusterIP
  selector:
    app: homeexchange-homeexchange
  ports:
  - name: homeexchange-homeexchange
    protocol: TCP
    port: 8080
    targetPort: 8080
