K8s/homeexchange-homes-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeexchange-homes-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeexchange-homes
  template:
    metadata:
      labels:
        app: homeexchange-homes
    spec:
      containers:
        - name: homeexchange-homes
          image: adnancrnovrsanin/homes:latest
---

apiVersion: v1
kind: Service
metadata:
  name: homeexchange-homes-srv
spec:
  type: ClusterIP
  selector:
    app: homeexchange-homes
  ports:
  - name: homeexchange-homes
    protocol: TCP
    port: 8080
    targetPort: 8080
